--- a/Expression_detect.ipynb
+++ b/Expression_detect.ipynb
@@ -1560,6 +1560,143 @@
    "source": [
     "plot_loss_curves(model_1_results)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bad3d557",
+   "metadata": {},
+   "source": [
+    "Anyway... Let's update the `train()` to save the best checkpoint for the little app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "id": "ecb095f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(model: torch.nn.Module,\n",
+    "          train_dataloader: torch.utils.data.DataLoader,\n",
+    "          test_dataloader: torch.utils.data.DataLoader,\n",
+    "          optimizer: torch.optim.Optimizer,\n",
+    "          loss_fn: torch.nn.Module = nn.CrossEntropyLoss(),\n",
+    "          epochs: int = 5,\n",
+    "          device=device,\n",
+    "          best_path=\"best_model.pth\"):\n",
+    "    \n",
+    "    results = {'train_loss': [],\n",
+    "               'train_acc': [],\n",
+    "               'test_loss': [],\n",
+    "               'test_acc': []}\n",
+    "    \n",
+    "    best_loss = float(\"inf\") # save the minimum test_loss\n",
+    "\n",
+    "    for epoch in tqdm(range(epochs)):\n",
+    "        train_loss, train_acc = train_step(model=model,\n",
+    "                                           dataloader=train_dataloader,\n",
+    "                                           loss_fn=loss_fn,\n",
+    "                                           optimizer=optimizer,\n",
+    "                                           device=device)\n",
+    "        test_loss, test_acc = test_step(model=model,\n",
+    "                                        dataloader=test_dataloader,\n",
+    "                                        loss_fn=loss_fn,\n",
+    "                                        device=device)\n",
+    "        \n",
+    "        # 4. Print out what is happening\n",
+    "        print(f\"Epoch: {epoch} | Train loss: {train_loss:.4f} | Train acc: {train_acc:.4f} | Test loss: {test_loss:.4f} | Test acc: {test_acc:.4f}\")\n",
+    "\n",
+    "        # 5. Update results dict\n",
+    "        results['train_loss'].append(train_loss)\n",
+    "        results['train_acc'].append(train_acc)\n",
+    "        results['test_loss'].append(test_loss)\n",
+    "        results['test_acc'].append(test_acc)\n",
+    "\n",
+    "        if test_loss < best_loss:\n",
+    "            best_loss = test_loss\n",
+    "            torch.save(model.state_dict(), best_path) # update frequently for the minimum loss\n",
+    "\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "id": "c97abe74",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "059e527b0bcb4b3dacd0057ca4a6399b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/20 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 0 | Train loss: 0.0191 | Train acc: 0.9938 | Test loss: 2.1124 | Test acc: 0.5801\n",
+      "Epoch: 1 | Train loss: 0.0121 | Train acc: 0.9938 | Test loss: 2.1158 | Test acc: 0.5801\n",
+      "Epoch: 2 | Train loss: 0.0048 | Train acc: 1.0000 | Test loss: 2.1140 | Test acc: 0.5593\n",
+      "Epoch: 3 | Train loss: 0.0308 | Train acc: 0.9875 | Test loss: 2.1058 | Test acc: 0.6010\n",
+      "Epoch: 4 | Train loss: 0.0150 | Train acc: 0.9938 | Test loss: 2.0723 | Test acc: 0.5801\n",
+      "Epoch: 5 | Train loss: 0.0082 | Train acc: 1.0000 | Test loss: 2.1515 | Test acc: 0.5593\n",
+      "Epoch: 6 | Train loss: 0.0017 | Train acc: 1.0000 | Test loss: 2.1524 | Test acc: 0.5593\n",
+      "Epoch: 7 | Train loss: 0.1159 | Train acc: 0.9812 | Test loss: 2.1402 | Test acc: 0.5593\n",
+      "Epoch: 8 | Train loss: 0.0110 | Train acc: 1.0000 | Test loss: 2.1297 | Test acc: 0.5593\n",
+      "Epoch: 9 | Train loss: 0.0008 | Train acc: 1.0000 | Test loss: 2.0258 | Test acc: 0.5849\n",
+      "Epoch: 10 | Train loss: 0.0232 | Train acc: 0.9875 | Test loss: 2.0800 | Test acc: 0.5593\n",
+      "Epoch: 11 | Train loss: 0.0143 | Train acc: 0.9938 | Test loss: 2.0691 | Test acc: 0.5593\n",
+      "Epoch: 12 | Train loss: 0.0162 | Train acc: 0.9938 | Test loss: 2.1271 | Test acc: 0.5593\n",
+      "Epoch: 13 | Train loss: 0.0035 | Train acc: 1.0000 | Test loss: 2.1197 | Test acc: 0.5593\n",
+      "Epoch: 14 | Train loss: 0.0101 | Train acc: 1.0000 | Test loss: 2.0544 | Test acc: 0.5849\n",
+      "Epoch: 15 | Train loss: 0.0029 | Train acc: 1.0000 | Test loss: 2.0308 | Test acc: 0.6058\n",
+      "Epoch: 16 | Train loss: 0.0036 | Train acc: 1.0000 | Test loss: 2.0701 | Test acc: 0.5593\n",
+      "Epoch: 17 | Train loss: 0.0194 | Train acc: 0.9875 | Test loss: 2.0365 | Test acc: 0.5849\n",
+      "Epoch: 18 | Train loss: 0.0208 | Train acc: 0.9875 | Test loss: 2.0567 | Test acc: 0.5849\n",
+      "Epoch: 19 | Train loss: 0.0025 | Train acc: 1.0000 | Test loss: 2.1237 | Test acc: 0.5593\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_1_results = train(model=model_1,\n",
+    "                train_dataloader=train_dataloader,\n",
+    "                test_dataloader=valid_dataloader,\n",
+    "                optimizer=optimizer,\n",
+    "                loss_fn=loss_fn,\n",
+    "                epochs=20,\n",
+    "                device=device,\n",
+    "                best_path=\"best_resnet18.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b632209f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_1.load_state_dict(torch.load(\"best_resnet18.pth\", map_location=device)) # keep the best performance to best_resnet18.pth"
+   ]
   }
  ],
  "metadata": {
